--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,107 @@
+*{
+    font-family: "Calibri", Helvetica, Arial, sans-serif;
+    font-size:18px;
+    line-height:1.5em;
+}
 body{
     max-width:760px;
     margin: 0 auto;
-
-    font-family: "Calibri", Helvetica, Arial, sans-serif;
+    padding:2em;
 }
 h1, h2{
     font-family: Georgia,"Times New Roman", Serif;
 }
 
+h1{
+    font-size:3em;
+    float:left;
+}
+
+h2{
+    font-size:2em;
+}
+
+
+.profile-pic{
+    width:242px;
+    height:300px;
+
+    margin:20px;
+
+    float:right;
+
+    background-image: url('../images/olly.jpg');
+    background-size: cover;
+}
+
+.profile-list, .profile-list li{
+    margin:0;
+    padding:0;
+}
+
+
 .logo-list li{
     display:block;
     float:left;
-    
+
+    height:50px;
     width:20%;
 
     list-style: none;
-
+    text-align: center;
 }
+
+.logo{
+    vertical-align:middle;
+}
+
+.cf:before,
+.cf:after {
+    content: " ";
+    display: table;
+}
+.cf:after {
+    clear: both;
+}
+.cf {
+    *zoom: 1;
+}
+
+@media screen and (min-width: 760px) {
+    *{
+        font-size:24px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+
+    *{
+        font-size:14px;
+    }
+
+    h1{
+       float:none;
+    }
+
+    .profile-pic{
+        width:120px;
+        height:150px;
+        float:none;
+        margin:0 auto;
+
+    }
+
+    .profile-list{
+        float:none;
+    }
+
+    .logo-list li{
+        float:none;
+        width:100%;
+    }
+
+    .headline{
+        text-align: center;
+    }
+}
+
