--- a/css/main.css
+++ b/css/main.css
@@ -13,44 +13,52 @@ body{
 }
 h1, h2{
     font-family: Georgia,"Times New Roman", Serif;
+    margin:0;
 }
 
 h1{
     padding:1em;
-    font-size:3em;
+    margin-bottom:.5em;
+    font-size:2em;
     background:#444;
     color:#fff;
 }
 
 h2{
     font-size:2em;
-    margin-bottom:0;
+    margin:0;
 }
 
 .headline{
     text-align: center;
 }
 
-.profile-pic{
-    width:120px;
-    height:150px;
-
-    margin:0 auto;
-
-    background-image: url('../images/olly.jpg');
-    background-size: cover;
-}
 
 .profile-list, .profile-list li{
     margin:0;
     padding:0;
 }
 
+.social-list{
+    margin:1em 0;
+    padding:0;
+}
+
+.social-list li{
+    list-style: none;
+}
+
+.logo-list{
+    display:none;
+    border:1px solid #ccc;
+    padding:0;
+}
 
 .logo-list li{
     float:right;
     width:100%;
-    margin:20px 0;
+    margin:1.5em 0;
+
 
     list-style: none;
     text-align: center;
@@ -85,16 +93,39 @@ img {
     border: 0;
 }
 
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 480px) {
+
+    h1{
+        float:left;
+    }
+    
+    .logo-list{
+        display:block;
+    }
 
     .logo-list li{
 
         width:50%;
     }
+
+    .logo-list li:last-of-type{
+
+        width:100%;
+    }
+
+    .profile-pic{
+        width:120px;
+        height:150px;
+
+        margin:0 auto;
+
+        background-image: url('../images/olly.jpg');
+        background-size: cover;
+    }
 }
 
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 640px) {
 
     *{
         font-size:18px;
@@ -102,20 +133,27 @@ img {
 
     h1{
         float:left;
+        font-size:3em;
     }
 
     .profile-pic{
+        float:left;
+
         width:242px;
         height:300px;
 
-        margin:20px;
-
-
+        margin:1.5em;
     }
 
     .logo-list li{
 
         width:33%;
+    }
+
+    .logo-list li:nth-child(4),
+    .logo-list li:nth-child(5){
+
+        width:50%;
     }
 
     .headline{
@@ -132,7 +170,19 @@ img {
      max-width:760px;
     }
 
-    .logo-list li{
+    .profile-pic{
+
+
+        width:300px;
+        height:470px;
+
+        margin:1.5em;
+    }
+
+    .logo-list li,
+    .logo-list li:nth-child(4),
+    .logo-list li:nth-child(5),
+    .logo-list li:last-of-type{
         width:20%;
     }
 }
