--- a/css/main.css
+++ b/css/main.css
@@ -64,10 +64,6 @@ h2{
 }
 
 
-.organizations{
-    display:none;
-}
-
 .cf:before,
 .cf:after {
     content: " ";
@@ -97,7 +93,6 @@ img {
     border: 0;
 }
 
-@media screen and (min-width: 480px) {
 
     .organizations{
         display:block;
@@ -112,7 +107,7 @@ img {
 
     .logo-list li{
         float:left;
-        width:20%;
+        width:25%;
 
         list-style: none;
         text-align: center;
@@ -120,18 +115,78 @@ img {
 
     .logo{
         display:block;
-        margin:0 auto;
+        margin:1em auto;
     }
 
-    i{
-        background: url(../images/sprite.png) no-repeat top left;
-    }
+    
 
-    .sprite-alcon{ background-position: 0 0; width: 60px; height: 15px; }
-    .sprite-bam{ background-position: 0 -144px; width: 31px; height: 25px; }
-    .sprite-dhl{ background-position: 0 -319px; width: 43px; height: 25px; }
-    .sprite-hp{ background-position: 0 -494px; width: 25px; height: 25px; }
-    .sprite-sea-world{ background-position: 0 -669px; width: 72px; height: 25px; }
+    i {
+    background-image: url(../images/spritesheet.png);
+    background-repeat: no-repeat;
+    display: block;
+}
+
+
+
+.sprite-alcon {
+    width: 60px;
+    height: 15px;
+    background-position: -180px -20px;
+}
+
+
+.sprite-bam {
+    width: 31px;
+    height: 25px;
+    background-position: -281px -20px;
+}
+
+
+
+.sprite-dhl {
+    width: 43px;
+    height: 25px;
+    background-position: -281px -85px;
+}
+
+
+
+.sprite-dubizzle {
+    width: 43px;
+    height: 24px;
+    background-position: -281px -150px;
+}
+
+
+.sprite-emirates {
+    width: 25px;
+    height: 25px;
+    background-position: -20px -304px;
+}
+
+
+.sprite-hp {
+    width: 25px;
+    height: 25px;
+    background-position: -364px -110px;
+}
+
+
+.sprite-sea-world {
+    width: 72px;
+    height: 25px;
+    background-position: -268px -304px;
+}
+
+
+.sprite-sekari {
+    width: 43px;
+    height: 21px;
+    background-position: -364px -175px;
+}
+
+@media screen and (min-width: 480px) {
+
 
     .profile-pic{
         float:right;
@@ -139,8 +194,11 @@ img {
         height:150px;
         border-left:2em solid #fff;
 
-        background-image: url('../images/olly.jpg');
+        background-image: url('../images/olly-lewis.jpg');
         background-size: cover;
+        background-position: -40px;
+
+
     }
 
 
@@ -167,11 +225,71 @@ img {
         text-align: left;
     }
 
-    .sprite-alcon{ background-position: 0 -65px; width: 120px; height: 29px; }
-    .sprite-bam{ background-position: 0 -219px; width: 61px; height: 50px; }
-    .sprite-dhl{ background-position: 0 -394px; width: 86px; height: 50px; }
-    .sprite-hp{ background-position: 0 -569px; width: 50px; height: 50px; }
-    .sprite-sea-world{ background-position: 0 -744px; width: 143px; height: 50px; }
+
+
+.sprite-alcon {
+    width: 120px;
+    height: 29px;
+    background-position: -20px -20px;
+}
+
+
+
+.sprite-bam {
+    width: 61px;
+    height: 50px;
+
+    background-position: -180px -75px;
+}
+
+
+.sprite-dhl {
+    width: 86px;
+    height: 50px;
+    background-position: -20px -165px;
+}
+
+
+
+.sprite-dubizzle {
+    width: 86px;
+    height: 48px;
+    background-position: -146px -165px;
+}
+
+
+
+.sprite-emirates {
+    width: 50px;
+    height: 50px;
+    background-position: -272px -214px;
+}
+
+
+
+.sprite-hp {
+    width: 50px;
+    height: 50px;
+    background-position: -364px -20px;
+}
+
+
+
+.sprite-sea-world {
+    width: 143px;
+    height: 50px;
+    background-position: -85px -304px;
+}
+
+
+
+.sprite-sekari {
+    width: 86px;
+    height: 43px;
+    background-position: -268px -369px;
+}
+
+
 }
 
 @media screen and (min-width: 760px) {
@@ -206,4 +324,3 @@ img {
     }
 
 }
-
