--- a/css/main.css
+++ b/css/main.css
@@ -14,22 +14,33 @@ body{
     padding:2em;
 }
 
-h1, h2{
+h1, h2, .headline p {
     font-family: 'Fjalla One', "Calibri", Helvetica, Arial, sans-serif;
     margin:0;
 }
 
+.headline {
+    height:150px;
+    background:#444;
+}
+
+
 h1{
-    height:140px;
-    margin-bottom:.5em;
+    
+    margin-bottom:0;
     padding:5px;
 
     font-size:3em;
     line-height:1em;
     vertical-align: baseline;
-    background:#444;
+    
     color:#fff;
 
+}
+
+.headline p {
+    color:#fff;
+    padding:5px;
 }
 
 h2{
@@ -212,7 +223,7 @@ img {
         font-size:18px;
     }
 
-    h1{
+    .headline{
         height:290px;
     }
 
@@ -301,8 +312,8 @@ img {
         max-width:760px;
     }
 
-    h1{
-       height:460px;
+    .headline{
+       height:470px;
     }
 
     .profile-pic{
