--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 body{
     margin: 0 auto;
     padding:2em;
+    min-width:320px;
 }
 
 h1, h2, .headline p {
@@ -105,51 +106,58 @@ img {
 }
 
 
-    .organizations{
-        display:block;
-        margin:1.5em 0;
-        padding-top:1em;
-        border-top:1px solid;
-    }
+.organizations{
+    display:block;
+    margin:1.5em 0;
+    padding-top:1em;
+    border-top:1px solid;
+}
 
-    .logo-list{
-        padding:0;
-    }
+.logo-list{
+    padding:0;
+}
 
-    .logo-list li{
-        float:left;
-        width:25%;
+.logo-list li{
+    float:left;
+    width:25%;
 
-        list-style: none;
-        text-align: center;
-    }
+    list-style: none;
+    text-align: center;
+}
 
-    .logo{
-        display:block;
-        margin:1em auto;
-    }
+.logo-list li:nth-child(5) {  
+  clear: left;
+}
 
+.logo{
+    display:block;
+    margin:1em auto;
+}
     
 
-    i {
-    background-image: url(../images/spritesheet.png);
+i {
+    background-image: url(../images/spritesheet_v2.png);
     background-repeat: no-repeat;
     display: block;
 }
 
-
+.sprite-embed {
+    width: 72px;
+    height: 28px;
+    background-position: -146px -120px;
+}
 
 .sprite-alcon {
     width: 60px;
     height: 15px;
-    background-position: -180px -20px;
+    background-position: -123px -1px;
 }
 
 
 .sprite-bam {
     width: 31px;
     height: 25px;
-    background-position: -281px -20px;
+    background-position: -186px -1px;
 }
 
 
@@ -157,7 +165,7 @@ img {
 .sprite-dhl {
     width: 43px;
     height: 25px;
-    background-position: -281px -85px;
+    background-position: -186px -28px;
 }
 
 
@@ -165,28 +173,28 @@ img {
 .sprite-dubizzle {
     width: 43px;
     height: 24px;
-    background-position: -281px -150px;
+    background-position: -186px -55px;
 }
 
 
 .sprite-emirates {
     width: 25px;
     height: 25px;
-    background-position: -20px -304px;
+    background-position: -177px -81px;
 }
 
 
 .sprite-hp {
     width: 25px;
     height: 25px;
-    background-position: -364px -110px;
+    background-position: -231px -53px;
 }
 
 
 .sprite-sea-world {
     width: 72px;
     height: 25px;
-    background-position: -268px -304px;
+    background-position: -204px -81px;
 }
 
 
@@ -224,7 +232,7 @@ img {
     }
 
     .headline{
-        height:290px;
+        height:300px;
     }
 
     .profile-pic{
@@ -236,12 +244,17 @@ img {
         text-align: left;
     }
 
+.sprite-embed {
+    width: 143px;
+    height: 57px;
+    background-position: -1px -122px;
+}
 
 
 .sprite-alcon {
     width: 120px;
     height: 29px;
-    background-position: -20px -20px;
+    background-position: -1px -1px;
 }
 
 
@@ -249,15 +262,14 @@ img {
 .sprite-bam {
     width: 61px;
     height: 50px;
-
-    background-position: -180px -75px;
+    background-position: -123px -18px;
 }
 
 
 .sprite-dhl {
     width: 86px;
     height: 50px;
-    background-position: -20px -165px;
+    background-position: -1px -70px;
 }
 
 
@@ -265,7 +277,7 @@ img {
 .sprite-dubizzle {
     width: 86px;
     height: 48px;
-    background-position: -146px -165px;
+    background-position: -89px -70px;
 }
 
 
@@ -273,7 +285,7 @@ img {
 .sprite-emirates {
     width: 50px;
     height: 50px;
-    background-position: -272px -214px;
+    background-position: -146px -150px;
 }
 
 
@@ -281,7 +293,7 @@ img {
 .sprite-hp {
     width: 50px;
     height: 50px;
-    background-position: -364px -20px;
+    background-position: -231px -1px;
 }
 
 
@@ -289,7 +301,7 @@ img {
 .sprite-sea-world {
     width: 143px;
     height: 50px;
-    background-position: -85px -304px;
+    background-position: -1px -181px;
 }
 
 
