updates completed - Part Deux

--- a/css/main.css
+++ b/css/main.css
@@ -213,7 +213,7 @@ i {
         height:150px;
         border-left:2em solid #fff;
 
-        background-image: url('../images/olly-lewis.jpg');
+        background-image: url('../images/olly-lewis-v2.jpg');
         background-size: cover;
         background-position: -40px;
 
