--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ h1, h2, .headline p {
 h1{
     
     margin-bottom:0;
-    padding:5px;
+    padding:10px;
 
     font-size:3em;
     line-height:1em;
@@ -46,7 +46,7 @@ h1{
 
 h2{
     font-size:2em;
-    margin:0 0 .5em 0;
+    margin:.5em 0 .5em 0;
     border-bottom:1px solid;
 }
 
@@ -136,72 +136,35 @@ img {
     
 
 i {
-    background-image: url(../images/spritesheet_v2.png);
+    background-image: url(../images/spritesheet_v5.png);
     background-repeat: no-repeat;
     display: block;
 }
 
+
+
 .sprite-embed {
     width: 72px;
     height: 28px;
-    background-position: -146px -120px;
+    background-position: -102px -250px;
 }
-
-.sprite-alcon {
-    width: 60px;
-    height: 15px;
-    background-position: -123px -1px;
-}
-
-
-.sprite-bam {
-    width: 31px;
-    height: 25px;
-    background-position: -186px -1px;
-}
-
-
-
-.sprite-dhl {
-    width: 43px;
-    height: 25px;
-    background-position: -186px -28px;
-}
-
-
 
 .sprite-dubizzle {
-    width: 43px;
-    height: 24px;
-    background-position: -186px -55px;
+    width: 75px;
+    height: 39px;
+    background-position: -173px -186px;
 }
 
-
-.sprite-emirates {
-    width: 25px;
-    height: 25px;
-    background-position: -177px -81px;
+.sprite-transguard-group {
+    width: 50px;
+    height: 50px;
+    background-position: -343px -10px;
 }
 
-
-.sprite-hp {
-    width: 25px;
-    height: 25px;
-    background-position: -231px -53px;
-}
-
-
-.sprite-sea-world {
+.sprite-explorer {
     width: 72px;
-    height: 25px;
-    background-position: -204px -81px;
-}
-
-
-.sprite-sekari {
-    width: 43px;
-    height: 21px;
-    background-position: -364px -175px;
+    height: 45px;
+    background-position: -10px -250px;
 }
 
 @media screen and (min-width: 480px) {
@@ -244,73 +207,29 @@ i {
         text-align: left;
     }
 
-.sprite-embed {
-    width: 143px;
-    height: 57px;
-    background-position: -1px -122px;
-}
-
-
-.sprite-alcon {
-    width: 120px;
-    height: 29px;
-    background-position: -1px -1px;
-}
-
-
-
-.sprite-bam {
-    width: 61px;
-    height: 50px;
-    background-position: -123px -18px;
-}
-
-
-.sprite-dhl {
-    width: 86px;
-    height: 50px;
-    background-position: -1px -70px;
-}
-
-
-
-.sprite-dubizzle {
-    width: 86px;
-    height: 48px;
-    background-position: -89px -70px;
-}
-
-
-
-.sprite-emirates {
-    width: 50px;
-    height: 50px;
-    background-position: -146px -150px;
-}
-
-
-
-.sprite-hp {
-    width: 50px;
-    height: 50px;
-    background-position: -231px -1px;
-}
-
-
-
-.sprite-sea-world {
-    width: 143px;
-    height: 50px;
-    background-position: -1px -181px;
-}
-
-
-
-.sprite-sekari {
-    width: 86px;
-    height: 43px;
-    background-position: -268px -369px;
-}
+    .sprite-embed {
+        width: 143px;
+        height: 57px;
+        background-position: -173px -109px;
+    }
+    
+    .sprite-dubizzle {
+        width: 150px;
+        height: 79px;
+        background-position: -173px -10px;
+    }
+    
+    .sprite-transguard-group {
+        width: 110px;
+        height: 110px;
+        background-position: -10px -120px;
+    }
+    
+    .sprite-explorer {
+        width: 143px;
+        height: 90px;
+        background-position: -10px -10px;
+    }
 
 
 }
