--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ h1, h2, .headline p {
     margin:0;
 }
 
+p:not([class]) {
+    text-align: justify;
+}
+
 .headline {
     height:150px;
     background:#444;
